# media-manager

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
media_dealer/: media_manager.py
src/media_manager/: __init__.py
src/media_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/media_manager/base/: base.py  datastructures.py
src/media_manager/managers/: aws.py  local.py
src/sockets/: __init__.py
src/sockets/broadcaster/: broadcaster.py  schemas.py
src/sockets/process_broadcaster/: process_broadcaster.py  utils.py
src/tests/: conftest.py  test_media.py
src/tests/broadcaster/: test_broadcaster.py
src/tests/test_files/: test_file.xml
src/tests/test_files/test_xml_full_history/: abr_2024.xml  feb_2024.xml  jun_2024.xml  mar_2024.xml  may_2024.xml
tests/: conftest.py  test_media.py  test_media_paths.py  test_utils.py
